--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "orchestra/testbench": "^6.18"
+        "orchestra/testbench": "^6.18",
+        "nunomaduro/collision": "^5.3"
     },
     "extra": {
         "laravel": {
@@ -33,5 +34,8 @@
                 "KirschbaumDevelopment\\SocialiteCognito\\SocialiteCognitoServiceProvider"
             ]
         }
+    },
+    "scripts": {
+        "test": "./vendor/bin/testbench package:test --no-coverage"
     }
 }
